# data_registry_dvc

./: .gitignore  ESCOPODOPROJETO.md  README.md  TUTORIAL_USO_DVC.md  dashboard.py  main.py  pyproject.toml  rota.py  setup.sh  setup_storage.sh  teste_download.sh  teste_ingestao.sh
.dvc/: config
data/: Mandando novamente2_20260327_164915.dvc  Mandando novamente2_20260327_164915.json  Mandando novamente_20260327_164807.dvc  Mandando novamente_20260327_164807.json  RDT1_PAVIMENTO_PANELA_REM_BOX_20260331_165841.dvc  RDT1_PAVIMENTO_PANELA_REM_BOX_20260331_165841.json  RDT1_PAVIMENTO_PANELA_REM_MASK_20260331_164912.dvc  RDT1_PAVIMENTO_PANELA_REM_MASK_20260331_164912.json  RDT1_PAVIMENTO_PANELA_REM_MASK_20260331_165715.dvc  RDT1_PAVIMENTO_PANELA_REM_MASK_20260331_165715.json  RDT1_linescan_trincas_20260409_143902.dvc  RDT1_linescan_trincas_20260409_143902.json  RDT2_360_defensas_mask_distance_20260331_111059.dvc  RDT2_360_defensas_mask_distance_20260331_111059.json  RDT2_360_defensas_mask_distance_filtrado_20260331_115858.dvc  RDT2_360_defensas_mask_distance_filtrado_20260331_115858.json  RDT2_360_ladybug_defensas_mask_final_20260331_155416.dvc  RDT2_360_ladybug_defensas_mask_final_20260331_155416.json  RDT2_360_ladybug_defensas_mask_final_20260331_160618.dvc  RDT2_360_ladybug_defensas_mask_final_20260331_160618.json  RDT2_360_ladybug_meio_fio_drenagem_20260409_144850.dvc  RDT2_360_ladybug_meio_fio_drenagem_20260409_144850.json  RDT2_360_ladybug_vegetacao_20260409_122804.dvc  RDT2_360_ladybug_vegetacao_20260409_122804.json  RDT2_DEFENSA_AMASSADO_V3_20260331_170228.dvc  (+19 more)
(+1 files in other folders)
