[project]
name = "rota-data-registry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[ssh]>=3.67.0",
    "pandas>=2.3.3",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "streamlit>=1.55.0",
    "typer>=0.24.1",
]
